tutorials/write-you-a-haskell/gen/ProtoParser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.2 from tutorials/write-you-a-haskell/gen/ProtoParser.y
-----------------------------------------------------------------------------

state 20 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseProto -> Proto__top                    (0)
	Proto__top -> Proto rtk__eof                       (1)
	Proto -> tok_Proto_dummy_26 Proto tok_Proto_dummy_26   (2)
	Proto -> tok_Alt_dummy_25 Alt tok_Alt_dummy_25     (3)
	Proto -> tok_AltList_dummy_24 AltList tok_AltList_dummy_24   (4)
	Proto -> tok_ConDef_dummy_23 ConDef tok_ConDef_dummy_23   (5)
	Proto -> tok_ConDefList_dummy_22 ConDefList tok_ConDefList_dummy_22   (6)
	Proto -> tok_ConId_dummy_21 ConId tok_ConId_dummy_21   (7)
	Proto -> tok_Decl_dummy_20 Decl tok_Decl_dummy_20   (8)
	Proto -> tok_DeclList_dummy_19 DeclList tok_DeclList_dummy_19   (9)
	Proto -> tok_Expr_dummy_18 Expr tok_Expr_dummy_18   (10)
	Proto -> tok_Field_dummy_17 Field tok_Field_dummy_17   (11)
	Proto -> tok_FieldList_dummy_16 FieldList tok_FieldList_dummy_16   (12)
	Proto -> tok_Id_dummy_15 Id tok_Id_dummy_15        (13)
	Proto -> tok_PArg_dummy_14 PArg tok_PArg_dummy_14   (14)
	Proto -> tok_PArgs_dummy_13 PArgs tok_PArgs_dummy_13   (15)
	Proto -> tok_Param_dummy_12 Param tok_Param_dummy_12   (16)
	Proto -> tok_Params_dummy_11 Params tok_Params_dummy_11   (17)
	Proto -> tok_Pat_dummy_10 Pat tok_Pat_dummy_10     (18)
	Proto -> tok_Ty_dummy_9 Ty tok_Ty_dummy_9          (19)
	Proto -> tok_TyVar_dummy_8 TyVar tok_TyVar_dummy_8   (20)
	Proto -> tok_TyVarList_dummy_7 TyVarList tok_TyVarList_dummy_7   (21)
	Proto -> qq_Proto                                  (22)
	Proto -> DeclList                                  (23)
	Alt -> qq_Alt                                      (24)
	Alt -> Pat tok__minus__symbol__6 Expr              (25)
	ListElem_AltList4 -> qq_AltList                    (26)
	ListElem_AltList4 -> Alt                           (27)
	AltList -> ListElem_AltList4                       (28)
	AltList -> AltList tok__semi__2 ListElem_AltList4   (29)
	ConDef -> qq_ConDef                                (30)
	ConDef -> ConId FieldList                          (31)
	ListElem_ConDefList2 -> qq_ConDefList              (32)
	ListElem_ConDefList2 -> ConDef                     (33)
	ConDefList -> ListElem_ConDefList2                 (34)
	ConDefList -> ConDefList tok__pipe__5 ListElem_ConDefList2   (35)
	ConId -> qq_ConId                                  (36)
	ConId -> conid                                     (37)
	Decl -> qq_Decl                                    (38)
	Decl -> tok_data_0 ConId TyVarList tok__eql__1 ConDefList tok__semi__2   (39)
	Decl -> tok_let_3 tok_rec_4 Id tok__eql__1 Expr tok__semi__2   (40)
	Decl -> tok_let_3 tok_rec_4 Id Params tok__eql__1 Expr tok__semi__2   (41)
	Decl -> tok_let_3 Id tok__eql__1 Expr tok__semi__2   (42)
	Decl -> tok_let_3 Id Params tok__eql__1 Expr tok__semi__2   (43)
	Decl -> Expr tok__semi__2                          (44)
	ListElem_DeclList0 -> qq_DeclList                  (45)
	ListElem_DeclList0 -> Decl                         (46)
	DeclList ->                                        (47)
	DeclList -> DeclList ListElem_DeclList0            (48)
	Atom -> qq_Expr                                    (49)
	Atom -> num                                        (50)
	Atom -> tok_true_20                                (51)
	Atom -> tok_false_21                               (52)
	Atom -> Id                                         (53)
	Atom -> ConId                                      (54)
	Atom -> tok__lparen__7 Expr tok__rparen__8         (55)
	App -> App Atom                                    (56)
	App -> Atom                                        (57)
	Mul -> Mul tok__star__25 App                       (58)
	Mul -> App                                         (59)
	Add -> Add tok__plus__23 Mul                       (60)
	Add -> Add tok__minus__24 Mul                      (61)
	Add -> Mul                                         (62)
	Eq -> Eq tok__eql__eql__22 Add                     (63)
	Eq -> Add                                          (64)
	Expr -> tok__symbol__9 Params tok__minus__symbol__6 Expr   (65)
	Expr -> tok_let_3 tok_rec_4 Id tok__eql__1 Expr tok_in_10 Expr   (66)
	Expr -> tok_let_3 Id tok__eql__1 Expr tok_in_10 Expr   (67)
	Expr -> tok_if_11 Expr tok_then_12 Expr tok_else_13 Expr   (68)
	Expr -> tok_fix_14 Expr                            (69)
	Expr -> tok_case_15 Expr tok_of_16 tok__symbol__17 AltList tok__symbol__18   (70)
	Expr -> Eq                                         (71)
	Field -> qq_Field                                  (72)
	Field -> TyAtom                                    (73)
	ListElem_FieldList3 -> qq_FieldList                (74)
	ListElem_FieldList3 -> Field                       (75)
	FieldList ->                                       (76)
	FieldList -> FieldList ListElem_FieldList3         (77)
	Id -> qq_Id                                        (78)
	Id -> id                                           (79)
	PArg -> qq_PArg                                    (80)
	PArg -> PatAtom                                    (81)
	ListElem_PArgs5 -> qq_PArgs                        (82)
	ListElem_PArgs5 -> PArg                            (83)
	PArgs -> ListElem_PArgs5                           (84)
	PArgs -> PArgs ListElem_PArgs5                     (85)
	Param -> qq_Param                                  (86)
	Param -> Id                                        (87)
	ListElem_Params6 -> qq_Params                      (88)
	ListElem_Params6 -> Param                          (89)
	Params -> ListElem_Params6                         (90)
	Params -> Params ListElem_Params6                  (91)
	PatAtom -> qq_Pat                                  (92)
	PatAtom -> num                                     (93)
	PatAtom -> tok__symbol__19                         (94)
	PatAtom -> tok_true_20                             (95)
	PatAtom -> tok_false_21                            (96)
	PatAtom -> Id                                      (97)
	PatAtom -> ConId                                   (98)
	PatAtom -> tok__lparen__7 Pat tok__rparen__8       (99)
	Pat -> ConId PArgs                                 (100)
	Pat -> PatAtom                                     (101)
	TyAtom -> qq_Ty                                    (102)
	TyAtom -> ConId                                    (103)
	TyAtom -> Id                                       (104)
	TyAtom -> tok__lparen__7 Ty tok__rparen__8         (105)
	TyApp -> TyApp TyAtom                              (106)
	TyApp -> TyAtom                                    (107)
	Ty -> TyApp tok__minus__symbol__6 Ty               (108)
	Ty -> TyApp                                        (109)
	TyVar -> qq_TyVar                                  (110)
	TyVar -> Id                                        (111)
	ListElem_TyVarList1 -> qq_TyVarList                (112)
	ListElem_TyVarList1 -> TyVar                       (113)
	TyVarList ->                                       (114)
	TyVarList -> TyVarList ListElem_TyVarList1         (115)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	rtk__eof       { L.PosToken _ L.EndOfFile }
	tok_Alt_dummy_25{ L.PosToken _ L.Tk__tok_Alt_dummy_25 }
	tok_AltList_dummy_24{ L.PosToken _ L.Tk__tok_AltList_dummy_24 }
	tok_ConDef_dummy_23{ L.PosToken _ L.Tk__tok_ConDef_dummy_23 }
	tok_ConDefList_dummy_22{ L.PosToken _ L.Tk__tok_ConDefList_dummy_22 }
	tok_ConId_dummy_21{ L.PosToken _ L.Tk__tok_ConId_dummy_21 }
	tok_Decl_dummy_20{ L.PosToken _ L.Tk__tok_Decl_dummy_20 }
	tok_DeclList_dummy_19{ L.PosToken _ L.Tk__tok_DeclList_dummy_19 }
	tok_Expr_dummy_18{ L.PosToken _ L.Tk__tok_Expr_dummy_18 }
	tok_Field_dummy_17{ L.PosToken _ L.Tk__tok_Field_dummy_17 }
	tok_FieldList_dummy_16{ L.PosToken _ L.Tk__tok_FieldList_dummy_16 }
	tok_Id_dummy_15{ L.PosToken _ L.Tk__tok_Id_dummy_15 }
	tok_PArg_dummy_14{ L.PosToken _ L.Tk__tok_PArg_dummy_14 }
	tok_PArgs_dummy_13{ L.PosToken _ L.Tk__tok_PArgs_dummy_13 }
	tok_Param_dummy_12{ L.PosToken _ L.Tk__tok_Param_dummy_12 }
	tok_Params_dummy_11{ L.PosToken _ L.Tk__tok_Params_dummy_11 }
	tok_Pat_dummy_10{ L.PosToken _ L.Tk__tok_Pat_dummy_10 }
	tok_Proto_dummy_26{ L.PosToken _ L.Tk__tok_Proto_dummy_26 }
	tok_Ty_dummy_9 { L.PosToken _ L.Tk__tok_Ty_dummy_9 }
	tok_TyVar_dummy_8{ L.PosToken _ L.Tk__tok_TyVar_dummy_8 }
	tok_TyVarList_dummy_7{ L.PosToken _ L.Tk__tok_TyVarList_dummy_7 }
	tok__symbol__18{ L.PosToken _ L.Tk__tok__symbol__18 }
	tok__pipe__5   { L.PosToken _ L.Tk__tok__pipe__5 }
	tok__symbol__17{ L.PosToken _ L.Tk__tok__symbol__17 }
	tok_true_20    { L.PosToken _ L.Tk__tok_true_20 }
	tok_then_12    { L.PosToken _ L.Tk__tok_then_12 }
	tok_rec_4      { L.PosToken _ L.Tk__tok_rec_4 }
	tok_of_16      { L.PosToken _ L.Tk__tok_of_16 }
	tok_let_3      { L.PosToken _ L.Tk__tok_let_3 }
	tok_in_10      { L.PosToken _ L.Tk__tok_in_10 }
	tok_if_11      { L.PosToken _ L.Tk__tok_if_11 }
	tok_fix_14     { L.PosToken _ L.Tk__tok_fix_14 }
	tok_false_21   { L.PosToken _ L.Tk__tok_false_21 }
	tok_else_13    { L.PosToken _ L.Tk__tok_else_13 }
	tok_data_0     { L.PosToken _ L.Tk__tok_data_0 }
	tok_case_15    { L.PosToken _ L.Tk__tok_case_15 }
	tok__symbol__19{ L.PosToken _ L.Tk__tok__symbol__19 }
	tok__symbol__9 { L.PosToken _ L.Tk__tok__symbol__9 }
	tok__eql__eql__22{ L.PosToken _ L.Tk__tok__eql__eql__22 }
	tok__eql__1    { L.PosToken _ L.Tk__tok__eql__1 }
	tok__semi__2   { L.PosToken _ L.Tk__tok__semi__2 }
	tok__minus__symbol__6{ L.PosToken _ L.Tk__tok__minus__symbol__6 }
	tok__minus__24 { L.PosToken _ L.Tk__tok__minus__24 }
	tok__plus__23  { L.PosToken _ L.Tk__tok__plus__23 }
	tok__star__25  { L.PosToken _ L.Tk__tok__star__25 }
	tok__rparen__8 { L.PosToken _ L.Tk__tok__rparen__8 }
	tok__lparen__7 { L.PosToken _ L.Tk__tok__lparen__7 }
	conid          { L.PosToken _ (L.Tk__conid _) }
	id             { L.PosToken _ (L.Tk__id _) }
	num            { L.PosToken _ (L.Tk__num _) }
	qq_Id          { L.PosToken _ (L.Tk__qq_Id _) }
	qq_ConId       { L.PosToken _ (L.Tk__qq_ConId _) }
	qq_Param       { L.PosToken _ (L.Tk__qq_Param _) }
	qq_Params      { L.PosToken _ (L.Tk__qq_Params _) }
	qq_Expr        { L.PosToken _ (L.Tk__qq_Expr _) }
	qq_PArg        { L.PosToken _ (L.Tk__qq_PArg _) }
	qq_PArgs       { L.PosToken _ (L.Tk__qq_PArgs _) }
	qq_Pat         { L.PosToken _ (L.Tk__qq_Pat _) }
	qq_Alt         { L.PosToken _ (L.Tk__qq_Alt _) }
	qq_AltList     { L.PosToken _ (L.Tk__qq_AltList _) }
	qq_Ty          { L.PosToken _ (L.Tk__qq_Ty _) }
	qq_Field       { L.PosToken _ (L.Tk__qq_Field _) }
	qq_FieldList   { L.PosToken _ (L.Tk__qq_FieldList _) }
	qq_ConDef      { L.PosToken _ (L.Tk__qq_ConDef _) }
	qq_ConDefList  { L.PosToken _ (L.Tk__qq_ConDefList _) }
	qq_TyVar       { L.PosToken _ (L.Tk__qq_TyVar _) }
	qq_TyVarList   { L.PosToken _ (L.Tk__qq_TyVarList _) }
	qq_Decl        { L.PosToken _ (L.Tk__qq_Decl _) }
	qq_DeclList    { L.PosToken _ (L.Tk__qq_DeclList _) }
	qq_Proto       { L.PosToken _ (L.Tk__qq_Proto _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseProto rule  0
	Proto__top      rule  1
	Proto           rules 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23
	Alt             rules 24, 25
	ListElem_AltList4 rules 26, 27
	AltList         rules 28, 29
	ConDef          rules 30, 31
	ListElem_ConDefList2 rules 32, 33
	ConDefList      rules 34, 35
	ConId           rules 36, 37
	Decl            rules 38, 39, 40, 41, 42, 43, 44
	ListElem_DeclList0 rules 45, 46
	DeclList        rules 47, 48
	Atom            rules 49, 50, 51, 52, 53, 54, 55
	App             rules 56, 57
	Mul             rules 58, 59
	Add             rules 60, 61, 62
	Eq              rules 63, 64
	Expr            rules 65, 66, 67, 68, 69, 70, 71
	Field           rules 72, 73
	ListElem_FieldList3 rules 74, 75
	FieldList       rules 76, 77
	Id              rules 78, 79
	PArg            rules 80, 81
	ListElem_PArgs5 rules 82, 83
	PArgs           rules 84, 85
	Param           rules 86, 87
	ListElem_Params6 rules 88, 89
	Params          rules 90, 91
	PatAtom         rules 92, 93, 94, 95, 96, 97, 98, 99
	Pat             rules 100, 101
	TyAtom          rules 102, 103, 104, 105
	TyApp           rules 106, 107
	Ty              rules 108, 109
	TyVar           rules 110, 111
	ListElem_TyVarList1 rules 112, 113
	TyVarList       rules 114, 115

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parseProto -> . Proto__top                   (rule 0)

	rtk__eof       reduce using rule 47
	tok_Alt_dummy_25shift, and enter state 4
	tok_AltList_dummy_24shift, and enter state 5
	tok_ConDef_dummy_23shift, and enter state 6
	tok_ConDefList_dummy_22shift, and enter state 7
	tok_ConId_dummy_21shift, and enter state 8
	tok_Decl_dummy_20shift, and enter state 9
	tok_DeclList_dummy_19shift, and enter state 10
	tok_Expr_dummy_18shift, and enter state 11
	tok_Field_dummy_17shift, and enter state 12
	tok_FieldList_dummy_16shift, and enter state 13
	tok_Id_dummy_15shift, and enter state 14
	tok_PArg_dummy_14shift, and enter state 15
	tok_PArgs_dummy_13shift, and enter state 16
	tok_Param_dummy_12shift, and enter state 17
	tok_Params_dummy_11shift, and enter state 18
	tok_Pat_dummy_10shift, and enter state 19
	tok_Proto_dummy_26shift, and enter state 20
	tok_Ty_dummy_9 shift, and enter state 21
	tok_TyVar_dummy_8shift, and enter state 22
	tok_TyVarList_dummy_7shift, and enter state 23
	tok_true_20    reduce using rule 47
	tok_let_3      reduce using rule 47
	tok_if_11      reduce using rule 47
	tok_fix_14     reduce using rule 47
	tok_false_21   reduce using rule 47
	tok_data_0     reduce using rule 47
	tok_case_15    reduce using rule 47
	tok__symbol__9 reduce using rule 47
	tok__lparen__7 reduce using rule 47
	conid          reduce using rule 47
	id             reduce using rule 47
	num            reduce using rule 47
	qq_Id          reduce using rule 47
	qq_ConId       reduce using rule 47
	qq_Expr        reduce using rule 47
	qq_Decl        reduce using rule 47
	qq_DeclList    reduce using rule 47
	qq_Proto       shift, and enter state 24

	Proto__top     goto state 25
	Proto          goto state 2
	DeclList       goto state 3

State 1

	Proto__top -> . Proto rtk__eof                      (rule 1)

	tok_Alt_dummy_25shift, and enter state 4
	tok_AltList_dummy_24shift, and enter state 5
	tok_ConDef_dummy_23shift, and enter state 6
	tok_ConDefList_dummy_22shift, and enter state 7
	tok_ConId_dummy_21shift, and enter state 8
	tok_Decl_dummy_20shift, and enter state 9
	tok_DeclList_dummy_19shift, and enter state 10
	tok_Expr_dummy_18shift, and enter state 11
	tok_Field_dummy_17shift, and enter state 12
	tok_FieldList_dummy_16shift, and enter state 13
	tok_Id_dummy_15shift, and enter state 14
	tok_PArg_dummy_14shift, and enter state 15
	tok_PArgs_dummy_13shift, and enter state 16
	tok_Param_dummy_12shift, and enter state 17
	tok_Params_dummy_11shift, and enter state 18
	tok_Pat_dummy_10shift, and enter state 19
	tok_Proto_dummy_26shift, and enter state 20
	tok_Ty_dummy_9 shift, and enter state 21
	tok_TyVar_dummy_8shift, and enter state 22
	tok_TyVarList_dummy_7shift, and enter state 23
	qq_Proto       shift, and enter state 24

	Proto          goto state 2
	DeclList       goto state 3

State 2

	Proto__top -> Proto . rtk__eof                      (rule 1)

	rtk__eof       shift, and enter state 114


State 3

	Proto -> DeclList .                                 (rule 23)
	DeclList -> DeclList . ListElem_DeclList0           (rule 48)

	rtk__eof       reduce using rule 23
	tok_Proto_dummy_26reduce using rule 23
	tok_true_20    shift, and enter state 80
	tok_let_3      shift, and enter state 93
	tok_if_11      shift, and enter state 82
	tok_fix_14     shift, and enter state 83
	tok_false_21   shift, and enter state 84
	tok_data_0     shift, and enter state 94
	tok_case_15    shift, and enter state 85
	tok__symbol__9 shift, and enter state 86
	tok__lparen__7 shift, and enter state 87
	conid          shift, and enter state 38
	id             shift, and enter state 29
	num            shift, and enter state 88
	qq_Id          shift, and enter state 30
	qq_ConId       shift, and enter state 39
	qq_Expr        shift, and enter state 89
	qq_Decl        shift, and enter state 95
	qq_DeclList    shift, and enter state 113

	ConId          goto state 72
	Decl           goto state 111
	ListElem_DeclList0goto state 112
	Atom           goto state 73
	App            goto state 74
	Mul            goto state 75
	Add            goto state 76
	Eq             goto state 77
	Expr           goto state 92
	Id             goto state 79

State 4

	Proto -> tok_Alt_dummy_25 . Alt tok_Alt_dummy_25    (rule 3)

	tok_true_20    shift, and enter state 46
	tok_false_21   shift, and enter state 47
	tok__symbol__19shift, and enter state 48
	tok__lparen__7 shift, and enter state 49
	conid          shift, and enter state 38
	id             shift, and enter state 29
	num            shift, and enter state 50
	qq_Id          shift, and enter state 30
	qq_ConId       shift, and enter state 39
	qq_Pat         shift, and enter state 51
	qq_Alt         shift, and enter state 108

	Alt            goto state 110
	ConId          goto state 42
	Id             goto state 43
	PatAtom        goto state 44
	Pat            goto state 107

State 5

	Proto -> tok_AltList_dummy_24 . AltList tok_AltList_dummy_24    (rule 4)

	tok_true_20    shift, and enter state 46
	tok_false_21   shift, and enter state 47
	tok__symbol__19shift, and enter state 48
	tok__lparen__7 shift, and enter state 49
	conid          shift, and enter state 38
	id             shift, and enter state 29
	num            shift, and enter state 50
	qq_Id          shift, and enter state 30
	qq_ConId       shift, and enter state 39
	qq_Pat         shift, and enter state 51
	qq_Alt         shift, and enter state 108
	qq_AltList     shift, and enter state 109

	Alt            goto state 104
	ListElem_AltList4goto state 105
	AltList        goto state 106
	ConId          goto state 42
	Id             goto state 43
	PatAtom        goto state 44
	Pat            goto state 107

State 6

	Proto -> tok_ConDef_dummy_23 . ConDef tok_ConDef_dummy_23    (rule 5)

	conid          shift, and enter state 38
	qq_ConId       shift, and enter state 39
	qq_ConDef      shift, and enter state 101

	ConDef         goto state 103
	ConId          goto state 100

State 7

	Proto -> tok_ConDefList_dummy_22 . ConDefList tok_ConDefList_dummy_22    (rule 6)

	conid          shift, and enter state 38
	qq_ConId       shift, and enter state 39
	qq_ConDef      shift, and enter state 101
	qq_ConDefList  shift, and enter state 102

	ConDef         goto state 97
	ListElem_ConDefList2goto state 98
	ConDefList     goto state 99
	ConId          goto state 100

State 8

	Proto -> tok_ConId_dummy_21 . ConId tok_ConId_dummy_21    (rule 7)

	conid          shift, and enter state 38
	qq_ConId       shift, and enter state 39

	ConId          goto state 96

State 9

	Proto -> tok_Decl_dummy_20 . Decl tok_Decl_dummy_20    (rule 8)

	tok_true_20    shift, and enter state 80
	tok_let_3      shift, and enter state 93
	tok_if_11      shift, and enter state 82
	tok_fix_14     shift, and enter state 83
	tok_false_21   shift, and enter state 84
	tok_data_0     shift, and enter state 94
	tok_case_15    shift, and enter state 85
	tok__symbol__9 shift, and enter state 86
	tok__lparen__7 shift, and enter state 87
	conid          shift, and enter state 38
	id             shift, and enter state 29
	num            shift, and enter state 88
	qq_Id          shift, and enter state 30
	qq_ConId       shift, and enter state 39
	qq_Expr        shift, and enter state 89
	qq_Decl        shift, and enter state 95

	ConId          goto state 72
	Decl           goto state 91
	Atom           goto state 73
	App            goto state 74
	Mul            goto state 75
	Add            goto state 76
	Eq             goto state 77
	Expr           goto state 92
	Id             goto state 79

State 10

	Proto -> tok_DeclList_dummy_19 . DeclList tok_DeclList_dummy_19    (rule 9)

	tok_DeclList_dummy_19reduce using rule 47
	tok_true_20    reduce using rule 47
	tok_let_3      reduce using rule 47
	tok_if_11      reduce using rule 47
	tok_fix_14     reduce using rule 47
	tok_false_21   reduce using rule 47
	tok_data_0     reduce using rule 47
	tok_case_15    reduce using rule 47
	tok__symbol__9 reduce using rule 47
	tok__lparen__7 reduce using rule 47
	conid          reduce using rule 47
	id             reduce using rule 47
	num            reduce using rule 47
	qq_Id          reduce using rule 47
	qq_ConId       reduce using rule 47
	qq_Expr        reduce using rule 47
	qq_Decl        reduce using rule 47
	qq_DeclList    reduce using rule 47

	DeclList       goto state 90

State 11

	Proto -> tok_Expr_dummy_18 . Expr tok_Expr_dummy_18    (rule 10)

	tok_true_20    shift, and enter state 80
	tok_let_3      shift, and enter state 81
	tok_if_11      shift, and enter state 82
	tok_fix_14     shift, and enter state 83
	tok_false_21   shift, and enter state 84
	tok_case_15    shift, and enter state 85
	tok__symbol__9 shift, and enter state 86
	tok__lparen__7 shift, and enter state 87
	conid          shift, and enter state 38
	id             shift, and enter state 29
	num            shift, and enter state 88
	qq_Id          shift, and enter state 30
	qq_ConId       shift, and enter state 39
	qq_Expr        shift, and enter state 89

	ConId          goto state 72
	Atom           goto state 73
	App            goto state 74
	Mul            goto state 75
	Add            goto state 76
	Eq             goto state 77
	Expr           goto state 78
	Id             goto state 79

State 12

	Proto -> tok_Field_dummy_17 . Field tok_Field_dummy_17    (rule 11)

	tok__lparen__7 shift, and enter state 37
	conid          shift, and enter state 38
	id             shift, and enter state 29
	qq_Id          shift, and enter state 30
	qq_ConId       shift, and enter state 39
	qq_Ty          shift, and enter state 40
	qq_Field       shift, and enter state 71

	ConId          goto state 32
	Field          goto state 69
	Id             goto state 33
	TyAtom         goto state 70

State 13

	Proto -> tok_FieldList_dummy_16 . FieldList tok_FieldList_dummy_16    (rule 12)

	tok_FieldList_dummy_16reduce using rule 76
	tok__lparen__7 reduce using rule 76
	conid          reduce using rule 76
	id             reduce using rule 76
	qq_Id          reduce using rule 76
	qq_ConId       reduce using rule 76
	qq_Ty          reduce using rule 76
	qq_Field       reduce using rule 76
	qq_FieldList   reduce using rule 76

	FieldList      goto state 68

State 14

	Proto -> tok_Id_dummy_15 . Id tok_Id_dummy_15       (rule 13)

	id             shift, and enter state 29
	qq_Id          shift, and enter state 30

	Id             goto state 67

State 15

	Proto -> tok_PArg_dummy_14 . PArg tok_PArg_dummy_14    (rule 14)

	tok_true_20    shift, and enter state 46
	tok_false_21   shift, and enter state 47
	tok__symbol__19shift, and enter state 48
	tok__lparen__7 shift, and enter state 49
	conid          shift, and enter state 38
	id             shift, and enter state 29
	num            shift, and enter state 50
	qq_Id          shift, and enter state 30
	qq_ConId       shift, and enter state 39
	qq_PArg        shift, and enter state 64
	qq_Pat         shift, and enter state 51

	ConId          goto state 59
	Id             goto state 43
	PArg           goto state 66
	PatAtom        goto state 63

State 16

	Proto -> tok_PArgs_dummy_13 . PArgs tok_PArgs_dummy_13    (rule 15)

	tok_true_20    shift, and enter state 46
	tok_false_21   shift, and enter state 47
	tok__symbol__19shift, and enter state 48
	tok__lparen__7 shift, and enter state 49
	conid          shift, and enter state 38
	id             shift, and enter state 29
	num            shift, and enter state 50
	qq_Id          shift, and enter state 30
	qq_ConId       shift, and enter state 39
	qq_PArg        shift, and enter state 64
	qq_PArgs       shift, and enter state 65
	qq_Pat         shift, and enter state 51

	ConId          goto state 59
	Id             goto state 43
	PArg           goto state 60
	ListElem_PArgs5goto state 61
	PArgs          goto state 62
	PatAtom        goto state 63

State 17

	Proto -> tok_Param_dummy_12 . Param tok_Param_dummy_12    (rule 16)

	id             shift, and enter state 29
	qq_Id          shift, and enter state 30
	qq_Param       shift, and enter state 56

	Id             goto state 52
	Param          goto state 58

State 18

	Proto -> tok_Params_dummy_11 . Params tok_Params_dummy_11    (rule 17)

	id             shift, and enter state 29
	qq_Id          shift, and enter state 30
	qq_Param       shift, and enter state 56
	qq_Params      shift, and enter state 57

	Id             goto state 52
	Param          goto state 53
	ListElem_Params6goto state 54
	Params         goto state 55

State 19

	Proto -> tok_Pat_dummy_10 . Pat tok_Pat_dummy_10    (rule 18)

	tok_true_20    shift, and enter state 46
	tok_false_21   shift, and enter state 47
	tok__symbol__19shift, and enter state 48
	tok__lparen__7 shift, and enter state 49
	conid          shift, and enter state 38
	id             shift, and enter state 29
	num            shift, and enter state 50
	qq_Id          shift, and enter state 30
	qq_ConId       shift, and enter state 39
	qq_Pat         shift, and enter state 51

	ConId          goto state 42
	Id             goto state 43
	PatAtom        goto state 44
	Pat            goto state 45

State 20

	Proto -> tok_Proto_dummy_26 . Proto tok_Proto_dummy_26    (rule 2)

	tok_Alt_dummy_25shift, and enter state 4
	tok_AltList_dummy_24shift, and enter state 5
	tok_ConDef_dummy_23shift, and enter state 6
	tok_ConDefList_dummy_22shift, and enter state 7
	tok_ConId_dummy_21shift, and enter state 8
	tok_Decl_dummy_20shift, and enter state 9
	tok_DeclList_dummy_19shift, and enter state 10
	tok_Expr_dummy_18shift, and enter state 11
	tok_Field_dummy_17shift, and enter state 12
	tok_FieldList_dummy_16shift, and enter state 13
	tok_Id_dummy_15shift, and enter state 14
	tok_PArg_dummy_14shift, and enter state 15
	tok_PArgs_dummy_13shift, and enter state 16
	tok_Param_dummy_12shift, and enter state 17
	tok_Params_dummy_11shift, and enter state 18
	tok_Pat_dummy_10shift, and enter state 19
	tok_Proto_dummy_26shift, and enter state 20
			(reduce using rule 47)

	tok_Ty_dummy_9 shift, and enter state 21
	tok_TyVar_dummy_8shift, and enter state 22
	tok_TyVarList_dummy_7shift, and enter state 23
	tok_true_20    reduce using rule 47
	tok_let_3      reduce using rule 47
	tok_if_11      reduce using rule 47
	tok_fix_14     reduce using rule 47
	tok_false_21   reduce using rule 47
	tok_data_0     reduce using rule 47
	tok_case_15    reduce using rule 47
	tok__symbol__9 reduce using rule 47
	tok__lparen__7 reduce using rule 47
	conid          reduce using rule 47
	id             reduce using rule 47
	num            reduce using rule 47
	qq_Id          reduce using rule 47
	qq_ConId       reduce using rule 47
	qq_Expr        reduce using rule 47
	qq_Decl        reduce using rule 47
	qq_DeclList    reduce using rule 47
	qq_Proto       shift, and enter state 24

	Proto          goto state 41
	DeclList       goto state 3

State 21

	Proto -> tok_Ty_dummy_9 . Ty tok_Ty_dummy_9         (rule 19)

	tok__lparen__7 shift, and enter state 37
	conid          shift, and enter state 38
	id             shift, and enter state 29
	qq_Id          shift, and enter state 30
	qq_ConId       shift, and enter state 39
	qq_Ty          shift, and enter state 40

	ConId          goto state 32
	Id             goto state 33
	TyAtom         goto state 34
	TyApp          goto state 35
	Ty             goto state 36

State 22

	Proto -> tok_TyVar_dummy_8 . TyVar tok_TyVar_dummy_8    (rule 20)

	id             shift, and enter state 29
	qq_Id          shift, and enter state 30
	qq_TyVar       shift, and enter state 31

	Id             goto state 27
	TyVar          goto state 28

State 23

	Proto -> tok_TyVarList_dummy_7 . TyVarList tok_TyVarList_dummy_7    (rule 21)

	tok_TyVarList_dummy_7reduce using rule 114
	id             reduce using rule 114
	qq_Id          reduce using rule 114
	qq_TyVar       reduce using rule 114
	qq_TyVarList   reduce using rule 114

	TyVarList      goto state 26

State 24

	Proto -> qq_Proto .                                 (rule 22)

	rtk__eof       reduce using rule 22
	tok_Proto_dummy_26reduce using rule 22


State 25

	%start_parseProto -> Proto__top .                   (rule 0)

	%eof           accept


State 26

	Proto -> tok_TyVarList_dummy_7 TyVarList . tok_TyVarList_dummy_7    (rule 21)
	TyVarList -> TyVarList . ListElem_TyVarList1        (rule 115)

	tok_TyVarList_dummy_7shift, and enter state 166
	id             shift, and enter state 29
	qq_Id          shift, and enter state 30
	qq_TyVar       shift, and enter state 31
	qq_TyVarList   shift, and enter state 167

	Id             goto state 27
	TyVar          goto state 164
	ListElem_TyVarList1goto state 165

State 27

	TyVar -> Id .                                       (rule 111)

	tok_TyVar_dummy_8reduce using rule 111
	tok_TyVarList_dummy_7reduce using rule 111
	tok__eql__1    reduce using rule 111
	id             reduce using rule 111
	qq_Id          reduce using rule 111
	qq_TyVar       reduce using rule 111
	qq_TyVarList   reduce using rule 111


State 28

	Proto -> tok_TyVar_dummy_8 TyVar . tok_TyVar_dummy_8    (rule 20)

	tok_TyVar_dummy_8shift, and enter state 163


State 29

	Id -> id .                                          (rule 79)
